fixed acq metrics styling(invisible box under), re-added fonts(shadcn erased css styling)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,135 @@
     @apply bg-background text-foreground;
   }
 }
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-Black.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-Black.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-BlackSlanted.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-BlackSlanted.woff') format('woff');
+  font-weight: 900;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-Bold.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-BoldSlanted.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-BoldSlanted.woff') format('woff');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-Heavy.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-Heavy.woff') format('woff');
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-HeavySlanted.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-HeavySlanted.woff') format('woff');
+  font-weight: 800;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-Light.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-LightSlanted.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-LightSlanted.woff') format('woff');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-Medium.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-MediumSlanted.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-MediumSlanted.woff') format('woff');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-Regular.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-RegularSlanted.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-RegularSlanted.woff') format('woff');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-Semibold.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-Semibold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-SemiboldSlanted.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-SemiboldSlanted.woff') format('woff');
+  font-weight: 600;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-Thin.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-Thin.woff') format('woff');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PP Object Sans';
+  src: url('/fonts/PPObjectSans-ThinSlanted.woff2') format('woff2'),
+    url('/fonts/PPObjectSans-ThinSlanted.woff') format('woff');
+  font-weight: 100;
+  font-style: italic;
+}
+
+body {
+  font-family: 'PP Object Sans', sans-serif;
+}
